# ARKanji

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  MetaManager.h  Model.h  PoseEstimation.cpp  PoseEstimation.h  README.md  Tracker.cpp  Tracker.h  Util.h  meta.json
etc/: ARKanji_Markers.docx
jpn_tess/: attention.md
model/: declarement.md
model/book/: license.txt  scene.gltf
model/car/: license.txt  scene.gltf
model/electricity/: license.txt  scene.gltf
model/fire/: license.txt  scene.gltf
model/firework/: license.txt  scene.gltf
model/japan/: scene.gltf
model/train/: license.txt  scene.gltf
shader/: fshader.frag  vshader.vert
